force-app/main/default/objects/vlocity_ps__DRBulkData__c/fields/vlocity_ps__BulkChunkStatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__BulkChunkStatus__c</fullName>
    <label>Bulk Chunk Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>