force-app/main/default/objects/vlocity_ps__DRBulkData__c/fields/vlocity_ps__DRBundleName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DRBundleName__c</fullName>
    <label>DR Custom Setting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>