force-app/main/default/objects/vlocity_ps__DRBulkData__c/fields/vlocity_ps__DRStatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DRStatus__c</fullName>
    <description>Status after processing DR map.</description>
    <label>DR Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>